Update footer text

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 
     <hr>
     <div class="container footer text-muted">
-        <p>SRA-Exporer is a side project by <a href="http://phil.ewels.co.uk">Phil Ewels</a>. The code is released under a GNU GPLv3 licence at <a href="https://github.com/ewels/sra-explorer">https://github.com/ewels/sra-explorer</a>.</p>
+        <p>SRA-Exporer was written by <a href="http://phil.ewels.co.uk">Phil Ewels</a>. Source code is available under a GNU GPLv3 licence at <a href="https://github.com/ewels/sra-explorer">https://github.com/ewels/sra-explorer</a>.</p>
     </div>
     <hr>
 
