--- a/index.html
+++ b/index.html
@@ -72,16 +72,8 @@
 
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="#" ng-click="returnToHomeButton()">SRA-Explorer</a>
-        </div>
-      <a href="#" class="btn navbar-btn navbar-right" ng-class="savedResults.length == 0 ? 'disabled btn-default' : 'btn-primary'" ng-click="checkoutButton()"><span class="glyphicon glyphicon-shopping-cart"></span> <span ng-bind="savedResults.length"></span> saved datasets</a>
+          <a href="#" class="btn navbar-btn" style="float:right;" ng-class="savedResults.length == 0 ? 'disabled btn-default' : 'btn-primary'" ng-click="checkoutButton()"><span class="glyphicon glyphicon-shopping-cart"></span> <span ng-bind="savedResults.length"></span> saved datasets</a>
         </div>
     </div>
 
