Make table scroll horizontally on mobile screens

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
             <hr>
 
-            <table class="table table-striped table-hover">
+            <div class="table-responsive"><table class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th><input type="checkbox" ng-model="selectAll" ng-click="checkAll()"></th>
@@ -203,7 +203,7 @@
                     <td>{{ x.createdate | date:'dd MMM yyyy' }}</td>
                   </tr>
                 </tbody>
-            </table>
+            </table></div>
         </div>
 
         <!-- Saved datasets -->
