Add banner about being currently broken

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
 
     <div class="container">
 
+        <div class="alert alert-danger" style="margin-top:20px;">
+            <h3 style="margin-top:0;">Status: Currently broken (2020-08-23)</h3>
+            <p>It looks like the SRA API has recently changed and SRA-explorer is not currently working.
+                I'm on holiday at the moment, but will fix this as soon as possible when I'm back in a few weeks.</p>
+            <p>As a bonus, I'm also hoping to add better error handling / reporting and spruce up a few other bits and pieces. Stay tuned!</p>
+        </div>
+
         <div class="jumbotron">
             <h1><a href="#" ng-click="returnToHomeButton()">SRA Explorer</a></h1>
             <p>This tool aims to make datasets within the Sequence Read Archive more accessible.</p>
