--- a/index.html
+++ b/index.html
@@ -483,7 +483,13 @@
 
     <hr>
     <div class="container footer text-muted">
-        <p>SRA-Explorer was written by <a href="http://phil.ewels.co.uk">Phil Ewels</a>. Source code is available under a GNU GPLv3 licence at <a href="https://github.com/ewels/sra-explorer">https://github.com/ewels/sra-explorer</a>.</p>
+        <p>
+            SRA-Explorer was written by <a href="http://phil.ewels.co.uk">Phil Ewels</a>.
+            Source code is available under a GNU GPLv3 licence at <a href="https://github.com/ewels/sra-explorer">https://github.com/ewels/sra-explorer</a>.
+        </p>
+        <p>
+            Here a lot? It might be worth taking a look at <a href="https://github.com/ewels/sra-explorer#alternatives">some alternative tools</a>..
+        </p>
     </div>
     <hr>
 
