--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                 method: "GET"
               }).success(function(sp_response) {
                 console.log("Got organisations:", sp_response);
-                $scope.seqeraplatform.orgs = sp_response.data.organizations;
+                $scope.seqeraplatform.orgs = sp_response.organizations;
                 // Loop through each org and fetch workspaces
                 angular.forEach($scope.seqeraplatform.orgs, function(org, key) {
                   var api_url_get_workspaces = $scope.seqeraplatform.api_base.replace(/\/+$/, '')+'/orgs/'+org.orgId+'/workspaces';
@@ -938,7 +938,7 @@
                     method: "GET"
                   }).success(function(sp_response) {
                     console.log(`Got workspaces for org ${org.orgId}`, sp_response);
-                    $scope.seqeraplatform.workspaces[org.orgId] = sp_response.data.workspaces;
+                    $scope.seqeraplatform.workspaces[org.orgId] = sp_response.workspaces;
                   }, function errorCallback(sp_response) {
                     console.log(`Error fetching workspaces for org: ${org}}`, sp_response);
                   });
