--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                           <div class="form-group">
                             <div class="col-sm-2">
                               <label class="sr-only" for="sp_organisation">Organisation</label>
-                              <select class="form-control" ng-model="seqeraplatform.selected_org" id="sp_organisation">
+                              <select class="form-control" ng-model="seqeraplatform.selected_org" ng-change="update_seqera_org()"> id="sp_organisation">
                                 <option ng-repeat="org in seqeraplatform.orgs" value="{{ org.orgId }}">{{ org.name }}</option>
                               </select>
                             </div>
@@ -926,9 +926,14 @@
                 headers: headers,
                 method: "GET"
               }).success(function(sp_response) {
-                // console.log("Got organisations:", sp_response);
+                console.log("Got organisations:", sp_response);
                 $scope.seqeraplatform.orgs = sp_response.organizations;
-                $scope.seqeraplatform.selected_org = $scope.seqeraplatform.orgs[0].orgId;
+                if($scope.seqeraplatform.orgs.length > 0){
+                  $scope.seqeraplatform.selected_org = $scope.seqeraplatform.orgs[0].orgId;
+                } else {
+                  $scope.seqeraplatform.selected_org = '';
+                  $scope.seqeraplatform.workspace_id = '';
+                }
                 // Loop through each org and fetch workspaces
                 angular.forEach($scope.seqeraplatform.orgs, function(org, key) {
                   var api_url_get_workspaces = $scope.seqeraplatform.api_base.replace(/\/+$/, '')+'/orgs/'+org.orgId+'/workspaces';
@@ -937,9 +942,9 @@
                     headers: headers,
                     method: "GET"
                   }).success(function(sp_response) {
-                    // console.log(`Got workspaces for org ${org.orgId}`, sp_response);
+                    console.log(`Got workspaces for org ${org.orgId}`, sp_response);
                     $scope.seqeraplatform.workspaces[org.orgId] = sp_response.workspaces;
-                    if(org.orgId == $scope.seqeraplatform.selected_org){
+                    if(org.orgId == $scope.seqeraplatform.selected_org && sp_response.workspaces[org.orgId].length > 0){
                       $scope.seqeraplatform.workspace_id = sp_response.workspaces[org.orgId][0].id;
                     }
                   }, function errorCallback(sp_response) {
@@ -951,6 +956,10 @@
                 console.log("Error fetching Seqera Platform orgs", sp_response);
                 return false;
               });
+            }
+
+            $scope.update_seqera_org = function(){
+              $scope.seqeraplatform.workspace_id = sp_response.workspaces[$scope.seqeraplatform.selected_org][0].id;
             }
 
             // Send metadata to Seqera Platform
